--- a/src/css/adminVentas/_cajaDiaria.scss
+++ b/src/css/adminVentas/_cajaDiaria.scss
@@ -1,6 +1,7 @@
 @import '../presencial/sharedStyles';
 
 .caja-diaria-container {
+    .link-class { font-weight: 500; text-decoration: none; color: rgb(61, 60, 60); &:hover { text-decoration: underline; } }
     padding: 2rem;
     max-width: 1400px;
     margin: 0 auto;
