--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -38,6 +38,7 @@
 @import './adminClinica/pacientesForms';
 @import './adminClinica/tutoresForms';
 @import './adminVentas/cajaDiaria';
+@import './adminVentas/cajaDetailPopup';
 @import './adminVentas/clinicalDashboard';
 @import './adminVentas/resumenSemanal';
 @import './adminVentas/saleDetailModal';
