--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,4 +1,5 @@
 @import "variables.scss";
+@import "breadcrumbs.scss";
 @import "addProduct.scss";
 @import "app.scss";
 @import "login.scss";
@@ -39,6 +40,8 @@
 @import './adminClinica/tutoresForms';
 @import './adminVentas/cajaDiaria';
 @import './adminVentas/cajaDetailPopup';
+@import './adminVentas/ventasGuardadasModal';
+@import './adminVentas/paySaleDebtModal';
 @import './adminVentas/clinicalDashboard';
 @import './adminVentas/resumenSemanal';
 @import './adminVentas/saleDetailModal';
